--- a/style.css
+++ b/style.css
@@ -1,12 +1,34 @@
 /* STYLESHEET */
 
+body:hover {
+        cursor: pointer;
+}
+
+body {
+        height: 800px;
+        margin: 0;
+}
 
 h1,
 h2 {
         display: flex;
         flex-direction: row;
         justify-content: center;
+}
 
+header,
+#reponse {
+        z-index: 0;
+}
+
+#socrate {
+        margin: 0;
+        width: 100vw;
+        height: 800px;
+        background-image: url('./images/ecole3.jpg');
+        background-size: cover;
+        position: absolute;
+        z-index: 1;
 }
 
 div {
@@ -30,10 +52,10 @@ div {
         max-height: 200px;
         text-decoration: underline;
         color: #C00;
+        font-size: 2em;
         }
 
 #philosophe:focus {
         color: #000;
         text-decoration: none;
-        font-size: 2em;
 }
