Switch rendered component
-Define State to determine component to be rendered
-Use switch statement to change component rendered
-Move body tag styles to src/index.css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  background-color: #000;
+  color: #0D0;
+  text-align: center;
+}
