--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-color: #000;
+  color: #0D0;
+  text-align: center;
 }
 
 code {
@@ -12,8 +16,6 @@ code {
     monospace;
 }
 
-body {
-  background-color: #000;
-  color: #0D0;
-  text-align: center;
+.hidden {
+  display: none;
 }
